--- a/Test3/app/src/main/res/layout/fragment_camera2_video.xml
+++ b/Test3/app/src/main/res/layout/fragment_camera2_video.xml
@@ -31,27 +31,29 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/texture"
-        android:background="#4285f4">
+        android:background="#4285f4"
+        android:id="@+id/frameLayout">
 
         <Button
             android:id="@+id/video"
             android:layout_width="200px"
             android:layout_height="100px"
+            android:layout_above="@+id/frameLayout"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:text="@string/record" />
 
+        <ImageButton
+            android:id="@+id/info"
+            style="@android:style/Widget.Material.Light.Button.Borderless"
+            android:layout_width="200px"
+            android:layout_height="100px"
+            android:layout_above="@+id/frameLayout"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="center_vertical|right"
+            android:contentDescription="@string/description_info"
+            android:padding="20dp"
+            android:src="@drawable/ic_action_info" />
     </FrameLayout>
-
-    <ImageButton
-        android:id="@+id/info"
-        style="@android:style/Widget.Material.Light.Button.Borderless"
-        android:layout_width="200px"
-        android:layout_height="100px"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/texture"
-        android:layout_gravity="center_vertical|right"
-        android:contentDescription="@string/description_info"
-        android:padding="20dp"
-        android:src="@drawable/ic_action_info" />
 
 </RelativeLayout>
