--- a/Test3/app/src/main/res/layout/fragment_camera2_video.xml
+++ b/Test3/app/src/main/res/layout/fragment_camera2_video.xml
@@ -14,46 +14,34 @@
  limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
     <com.example.nuonuomisu.test3.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
-        android:layout_height="900px"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="100dp" />
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"/>
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_height="match_parent"
         android:layout_below="@id/texture"
         android:background="#4285f4"
-        android:id="@+id/frameLayout">
+        android:layout_centerHorizontal="true"
+         />
 
-        <Button
-            android:id="@+id/video"
-            android:layout_width="200px"
-            android:layout_height="100px"
-            android:layout_above="@+id/frameLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:text="@string/record" />
-
-        <ImageButton
-            android:id="@+id/info"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="200px"
-            android:layout_height="100px"
-            android:layout_above="@+id/frameLayout"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="center_vertical|right"
-            android:contentDescription="@string/description_info"
-            android:padding="20dp"
-            android:src="@drawable/ic_action_info" />
-    </FrameLayout>
+    <Button
+        android:id="@+id/video"
+        android:layout_width="200px"
+        android:layout_height="200px"
+        android:layout_gravity="center"
+        android:text="@string/record"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="00dp" />
 
 </RelativeLayout>
