--- a/Test3/app/src/main/res/layout/recorder_live.xml
+++ b/Test3/app/src/main/res/layout/recorder_live.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#255"
-    tools:context="com.example.nuonuomisu.test3.Recorder">
+    tools:context="com.example.nuonuomisu.test3.RecorderLive">
 
 </RelativeLayout>
