--- a/Test3/app/src/main/res/layout/fragmentrecording.xml
+++ b/Test3/app/src/main/res/layout/fragmentrecording.xml
@@ -51,7 +51,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
-        android:text="Mode"
+        android:text=""
         android:background="#4285f4"
         android:textSize="32sp"
         android:textColor="#ffffff"/>
