--- a/Test3/app/src/main/res/layout/playerlist.xml
+++ b/Test3/app/src/main/res/layout/playerlist.xml
@@ -8,7 +8,7 @@
 
     <Button
         android:id="@+id/addBtn"
-        android:text="Add New Item"
+        android:text="Fresh Video List"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="updatePlayerList"/>
