--- a/Test3/app/src/main/res/layout/fragment_camera2_video.xml
+++ b/Test3/app/src/main/res/layout/fragment_camera2_video.xml
@@ -56,4 +56,15 @@
         android:textSize="32sp"
         android:textColor="#ffffff"/>
 
+    <TextView
+        android:id="@+id/timeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/video"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="18dp"
+        android:text="00:00:00"
+        android:textColor="#4285f4"
+        android:textSize="32sp" />
+
 </RelativeLayout>
