--- a/Test3/app/src/main/res/layout/uploadlist.xml
+++ b/Test3/app/src/main/res/layout/uploadlist.xml
@@ -6,13 +6,21 @@
     android:layout_height="match_parent"
     android:background="#255">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/upload_list"
+
+        android:layout_centerHorizontal="true"
+        android:text="TextView" />
+
     <ListView
         android:id="@+id/upload_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true">
-    </ListView>
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff"></ListView>
 
 </RelativeLayout>
