--- a/Test3/app/src/main/res/layout/popup_askforname.xml
+++ b/Test3/app/src/main/res/layout/popup_askforname.xml
@@ -9,12 +9,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_upload"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="13dp"
         android:text="Choose your action:"
         android:textSize="20sp"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_centerHorizontal="true" />
 
 
     <Button
