--- a/Test3/app/src/main/res/layout/uploadlist.xml
+++ b/Test3/app/src/main/res/layout/uploadlist.xml
@@ -10,8 +10,21 @@
         android:id="@+id/upload_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ffffff"></ListView>
+        android:textColor="#ffffff"
+        >
+        <!--android:layout_alignParentStart="true"-->
 
+    </ListView>
+
+    <TextView
+        android:id="@+id/countUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text="0"
+        android:background="#4285f4"
+        android:textSize="32sp"
+        android:textColor="#ffffff"/>
 </RelativeLayout>
